--- a/E-Share/E-Share/crowdFoundBooks.plist
+++ b/E-Share/E-Share/crowdFoundBooks.plist
@@ -3,6 +3,10 @@
 <plist version="1.0">
 <array>
 	<dict>
+		<key>crowdFoundId</key>
+		<string>ADFAS43543543SDFG</string>
+		<key>maximunCount</key>
+		<integer>7</integer>
 		<key>bookPrice</key>
 		<real>455.3</real>
 		<key>bookAuthor</key>
@@ -17,6 +21,10 @@
 		<string>Gamer</string>
 	</dict>
 	<dict>
+		<key>crowdFoundId</key>
+		<string>JKALSDJFI234989480</string>
+		<key>maximunCount</key>
+		<integer>8</integer>
 		<key>bookPrice</key>
 		<real>320.1</real>
 		<key>bookAuthor</key>
@@ -31,6 +39,10 @@
 		<string>Microsoft</string>
 	</dict>
 	<dict>
+		<key>crowdFoundId</key>
+		<string>ASJFKAJSL923890238</string>
+		<key>maximunCount</key>
+		<integer>6</integer>
 		<key>bookPrice</key>
 		<real>226.16</real>
 		<key>bookAuthor</key>
@@ -45,6 +57,10 @@
 		<string>Alice</string>
 	</dict>
 	<dict>
+		<key>crowdFoundId</key>
+		<string>934JSKAO9U235JUJ0</string>
+		<key>maximunCount</key>
+		<integer>5</integer>
 		<key>bookPrice</key>
 		<real>570.99</real>
 		<key>bookAuthor</key>
@@ -59,6 +75,10 @@
 		<string>DaWing</string>
 	</dict>
 	<dict>
+		<key>crowdFoundId</key>
+		<string>ASJFKLJ923840909328</string>
+		<key>maximunCount</key>
+		<integer>10</integer>
 		<key>bookPrice</key>
 		<real>477.79</real>
 		<key>bookAuthor</key>
